@@ -1948,7 +1948,7 @@ BEGIN
     GROUPBOX        "Autocomplete",IDC_STATIC,133,7,94,39
 END
 
-IDD_PROPHITTARGET_VISUALS DIALOGEX 0, 0, 125, 139
+IDD_PROPHITTARGET_VISUALS DIALOGEX 0, 0, 125, 152
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1956,16 +1956,19 @@ BEGIN
     COMBOBOX        DISPID_Image,7,31,111,124,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Material",IDC_STATIC,7,48,63,9
     COMBOBOX        IDC_MATERIAL_COMBO,7,58,111,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,100,56,10
-    LTEXT           "Depth Bias",IDC_STATIC,5,89,36,8
-    EDITTEXT        IDC_DEPTH_BIAS,51,88,36,12,ES_AUTOHSCROLL
-    CONTROL         "Disable Lighting",IDC_DISABLE_LIGHTING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,110,66,10
+    CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,117,56,10
+    LTEXT           "Depth Bias",IDC_STATIC,5,104,36,8
+    EDITTEXT        IDC_DEPTH_BIAS,51,103,36,12,ES_AUTOHSCROLL
+    CONTROL         "Disable Lighting",IDC_DISABLE_LIGHTING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,127,66,10
     CONTROL         "Reflection Enabled",IDC_PRIM_REFLECT_ENABLE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,120,73,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,137,73,10
     LTEXT           "Drop Speed",IDC_STATIC,5,74,39,8
     EDITTEXT        IDC_TARGET_MOVE_SPEED_EDIT,51,73,36,12,ES_AUTOHSCROLL
     COMBOBOX        9,33,6,85,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Type",IDC_STATIC,7,8,17,8
+    LTEXT           "Raise Delay",IDC_STATIC,5,89,39,8
+    EDITTEXT        IDC_TARGET_RAISE_DELAY_EDIT,51,88,36,12,ES_AUTOHSCROLL
+    LTEXT           "ms",IDC_STATIC,88,89,10,8
 END
 
 IDD_PROPHITTARGET_POSITION DIALOGEX 0, 0, 125, 78
@@ -2251,7 +2254,7 @@ BEGIN
 
     IDD_PROPHITTARGET_VISUALS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 135
+        BOTTOMMARGIN, 148
     END
 
     IDD_PROPHITTARGET_POSITION, DIALOG
